--- a/styles.css
+++ b/styles.css
@@ -49,11 +49,12 @@ header{
 }
 
 
-input{
+input,select{
     width:20rem;
     height:2rem;
     border-radius: 5px;
     border-color: #ededed;
+    padding-left: .5rem;
 }
 button{
     width: 10rem;
@@ -82,6 +83,7 @@ span{
 }
 .finaldata{
     cursor: pointer;
+    margin-top: 1rem;
 }
 .finaldata:hover{
     color:#24a0ed;
